DuPont DevSB/src/objects/sma__MADriveProfile__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sma__Hazardous_Materials__c</fullName>
        <label>Hazardous Materials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__HeightUnits__c</fullName>
        <label>Height Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>meters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__LengthUnits__c</fullName>
        <label>Length Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>meters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__NumberOfAxles__c</fullName>
        <label>Number of Axles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__NumberOfTrailers__c</fullName>
        <label>Number of Trailers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__ProfileType__c</fullName>
        <label>Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__WeightPerAxle__c</fullName>
        <formula>CASE(sma__WeightUnits__c,  
&quot;pounds&quot;, 
    (sma__Weight__c/sma__NumberOfAxles__c)/2000,  
&quot;kilos&quot;, 
    (sma__Weight__c/sma__NumberOfAxles__c)/1000,
    (sma__Weight__c/sma__NumberOfAxles__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight Per Axle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__WeightUnits__c</fullName>
        <label>Weight Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>pounds</fullName>
                </value>
                <value>
                    <fullName>tons</fullName>
                </value>
                <value>
                    <fullName>kilos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__WidthUnits__c</fullName>
        <label>Width Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ft</fullName>
                </value>
                <value>
                    <fullName>meters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>MapAnything Drive Profile</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MapAnything Drive Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Drive Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>